Arreglando el put de entidades  y mejorando el logggin de la app
